resolved dividing lines, margins, sponsor logo spacing on blocktack summit page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,7 +47,7 @@ html, body {overflow-y:scroll; /* has to be scroll, not auto */ -webkit-overflow
 /* Reviewed */.feature-panel > img{margin:0 auto;padding:0 15%;}
 /* Reviewed */.feature-panel > h3{display:block;margin-bottom:10px;}
 /* Reviewed */.spacing-container{padding-top:102px;padding-bottom:50px;background-color:rgba(248,249,251,1);}
-.displayed{margin-top:100px;margin-bottom:100px;text-align:center;}
+/* Reviewed */.displayed{margin-top:100px;margin-bottom:100px;}
 /* Reviewed */.foot-feature{margin:0;padding-top:150px;padding-bottom:150px;background-color:rgba(83,32,111,1);color:rgba(255,255,255,1);text-align:center;}
 /* Reviewed */h2.action-title{margin-bottom:35px;font-size:30px;line-height:42px;font-weight:300;}
 .wrap-mob-feat{max-width:195px;}
@@ -75,13 +75,15 @@ a > div.col-md-4.feature-panel > p.lead.bs-lead{color:#373a3c;}
 /* Reviewed */h1.hero-head.summ-head,.summ-head,.about-head,.hero-reg-btn,.date,.hero-comm-des,.hall{text-align:center;}
 /* Reviewed */.profile-wrap{text-align:center;padding-bottom:40px;}
 /* Reviewed */.featpan-g1{margin-top:10px;}
-/* Reviewed */.featpan-g2{margin-top:10px;}
+/* Reviewed */.featpan-g2{padding:0;}
 /* Reviewed */.featpan-g3{padding-top:20px;}
 /* Reviewed */.featpan-1{padding-top:20px;}
 /* Reviewed */.featpan-2{padding-top:20px;}
 /* Reviewed */.featpan-3{padding-top:20px;}
 /* Reviewed */.featpan-4{padding-top:20px;margin-top:0px;}
 /* Reviewed */.featpan-5{padding-top:20px;}
+.sponsor-divide{display:block;margin:0 auto;min-width:350px;border-bottom:1px solid rgba(229,229,229,1);}
+
 
 .profile1, .profile2, .profile3, .profile4, .profile5 {margin:0 auto 28px auto; width:160px; height:160px; background-size:cover; display:block; border-radius:80px; -webkit-border-radius:80px; -moz-border-radius:80px; background-position:center;}
 .profile6 {margin:0 auto 0 -50px; width:180px; height: 180px; background-size:cover; padding:10px; background-color: rgba(255,255,255,1); border:1px solid rgba(240,240,240,1); background-position:center;}
@@ -169,6 +171,14 @@ footer > li{list-style:none;}
   /* Reviewed */.summ-head,.about-head,.hero-reg-btn,.date,.hero-comm-des,.hall{text-align:center;}
   /* Reviewed */.hero-comm-des{margin-bottom:20px;}
   /* Reviewed */.hall{margin-bottom:60px;}
+  /* Reviewed */.featpan-g1{margin-top:0px;}
+  /* Reviewed */.featpan-g2{margin-top:42px;padding-top:15px;}
+  /* Reviewed */.featpan-g3{margin-top:46px;}
+  /* Reviewed */.featpan-1{margin-top:18px;}
+  /* Reviewed */.featpan-2{margin-top:4px;}
+  /* Reviewed */.featpan-3{margin-top:8px;}
+  /* Reviewed */.featpan-4{margin-top:10px;}
+  /* Reviewed */.featpan-5{margin-top:35px;}
 
   /* Other */
   /* Reviewed */.slides{padding-top:80px;padding-right:0;padding-left:0;}  
@@ -215,7 +225,6 @@ footer > li{list-style:none;}
   /* Reviewed */.hero-wrap{padding-top:8.5rem;padding-bottom:15rem;}
   .hero-head{padding-left:0;}
   .slides{padding-top:50px;padding-right:0;padding-left:0;}
-  .feat-pan{font-size:26px;}
   .wrap-mob-feat{max-width:230px;}
   .topic{margin-bottom:5px;}
 
@@ -225,6 +234,11 @@ footer > li{list-style:none;}
   /* Feature action */
   /* Reviewed */h2.action-title{margin-bottom:3rem;font-size:2.5rem;line-height:3.5rem;}
   /* Reviewed */.foot-feature{margin:0;padding-top:12.5rem;padding-bottom:15rem;}
+  /* Reviewed */.hero-comm-des{margin-bottom:20px;}
+  /* Reviewed */.hall{margin-bottom:60px;}
+  /* Reviewed */.sec-hook{padding-top:50px;padding-bottom:50px;}
+  /* Reviewed */.gallery-contain{padding-top:50px;padding-bottom:50px;}
+  /* Reviewed */.feat-pan{font-size:26px;}  
 
   /* Footer */
   .foot-left-col{width:22.3%}
